# HP-Backend

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
api/v1/urls/: __init__.py  authentication.py
apps/authentication/: apps.py
apps/authentication/managers/: __init__.py  user.py
apps/authentication/models/: __init__.py  auth.py  profiles.py  user.py
apps/authentication/serializers/: __init__.py  authentication.py
apps/authentication/services/: __init__.py  authentication.py  email.py
apps/authentication/tests/: test_base.py  test_managers.py
apps/authentication/views/: __init__.py  authentication.py
config/: pipeline.py  urls.py
config/settings/: base.py  development.py  production.py  test.py
core/: extensions.py  models.py  pipeline.py
core/common/: serializers.py
core/exceptions/: __init__.py  base.py  handler.py
core/logging/: __init__.py  base.py
core/managers/: __init__.py  user.py
core/middleware/: __init__.py  authentication.py
core/serializers/: __init__.py  authentication.py  common.py
core/services/: __init__.py  authentication.py  email.py
core/utils/: responses.py
docs/: AUTHENTICATION.md  README.md
templates/: verify_email.html
templates/emails/: verify_email.html
